bugfix scrollbar for signup viewport hight less than 700px

--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -64,6 +64,6 @@
 
 @media (max-height: 700px) {
     .login-footer {
-        margin-top: 20px;
+        margin-top: 0;
     }
 }
